--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "express": "^4.18.2",
     "express-json": "^1.0.0",
     "joi": "^17.9.2",
+    "mongodb": "^5.6.0",
+    "mongoose": "^7.2.3",
     "morgan": "^1.10.0",
     "uuid": "^9.0.0"
   },
