--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "cross-env": "7.0.3",
+    "dotenv": "^16.3.0",
     "express": "^4.18.2",
     "express-json": "^1.0.0",
     "joi": "^17.9.2",
@@ -26,7 +27,7 @@
     "eslint-plugin-import": "2.25.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "5.2.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.22"
   },
   "description": "Виконайте форк цього репозиторію для виконання домашніх завдань (2-6) Форк створить репозиторій на вашому http://github.com",
   "main": ".eslintrc.js",
